<resources>
	<string name="app_name">MattatoyoMNG</string>
	<string name="delete">Delete</string>
	<string name="save">Save</string>
	<string name="activity_title_view">Calendar View Sample</string>
	<string name="open">Open</string>
	<string name="close">Close</string>
	<string name="ok">OK</string>
	<string name="sign_up">Sign up</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="dialog_delete_confirmation">Delete this event?</string>
	<string name="email_address">Email address</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="register">Register</string>
	<string name="email">Email</string>
	<string name="already_registered">Already registered?</string>
	<string name="logo">LOGO</string>
	<string name="login_here">Login here</string>
	<string name="title_activity_login">LoginActivity</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="welcome">"Welcome !"</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="invalid_password">Password must be >5 characters</string>
	<string name="login_failed">"Login failed"</string>
	<string name="not_registered">Not registered?</string>
	<string name="register_here">Register here</string>
	<string name="register_successfully">You have successfully registered</string>
	<string name="credentials_empty">Email and password fields cannot be empty</string>
	<string name="auth_failed">Authentication failed</string>
	<string name="title">Title</string>
	<string name="description">Description</string>
	<string name="add_event_image">Add event image</string>
	<string name="update_event_image">Update event image</string>
	<string name="event_image">Event image</string>
	<string name="event_title_no_empty">Event title cannot be empty</string>
	<string name="date_placeholder">January 1, 1970</string>
	<string name="time_placeholder">00:00</string>
	<string name="add_reminder">Add reminder</string>
	<string name="add_tag">Add tag</string>
	<string name="add_people">Add people</string>
	<string name="name">Name</string>
	<string name="surname">Surname</string>

	<string name="permission_storage_required">Storage permission is required. Enable it in settings.</string>
	<string name="permission_granted">Storage permission granted.</string>
	<string name="owner_name">Owner name</string>
	<string name="owner">Owner</string>
	<string name="username">Username</string>
	<string name="matta_info">Manage events, todos and keep track of important information regarding your organization. Working out the volunteers shifts, paying SIAE permits, remembering suppliers\' deliveries will never be a problem again!</string>
	<string name="app_subtitle">Circolo Mattatoyo\nmanagement app</string>
	<string name="lets_get_started">Let\'s get started!</string>
	<string name="please_wait">Please wait…</string>
	<string name="please_click_back_again_to_exit">Please, click back again to exit.</string>
	<string name="login_successfully">You successfully logged in!</string>

	<string name="enter_name">"Please enter name"</string>
	<string name="enter_username">"Please enter username"</string>
	<string name="enter_email">"Please enter email"</string>
	<string name="enter_password">"Please enter password"</string>
	<string name="events">Events</string>
	<string name="profile">Profile</string>
	<string name="log_out">Log out</string>
	<string name="user_profile_picture">User profile picture</string>
	<string name="update">Update</string>
	<string name="update_profile_success">Profile updated successfully!</string>
	<string name="update_profile_error">Error while updating user profile</string>
	<string name="edit_event">Edit event</string>
	<string name="create_event_success">Event created successfully!</string>
	<string name="update_event_success">Event updated successfully!</string>
	<string name="create_event_fail">Error while creating event</string>
	<string name="update_event_fail">Error while updating event</string>
	<string name="delete_event_fail">Error deleting event</string>
	<string name="delete_event_success">"Event successfully deleted"</string>
	<string name="enter_text">Enter text</string>
	<string name="add_new_tag">Add new tag</string>
	<string name="chip">Chip</string>
	<string name="permission_notification_required">Notification permission required. Enable it from settings.</string>
	<string name="search">Search</string>
	<string name="tags">Tags</string>
	<string name="no_description">No description available…</string>
	<string name="reminder_delete_success">Reminder successfully deleted</string>
	<string name="new_password">New password</string>
	<string name="confirm_new_password">Confirm new password</string>
	<string name="password_not_match">Passwords don\'t match</string>
	<string name="current_password">Current password</string>
	<string name="enter_current_password">Enter current password</string>
	<string name="enter_new_password">"Please enter new password"</string>
	<string name="enter_confirm_password">"Please repeat new password"</string>
	<string name="update_password_success">Password updated successfully!</string>
	<string name="update_password_fail">Password update failed.</string>
	<string name="user_details">User details</string>
	<string name="update_password">Update password</string>
	<string name="update_profile">Update profile</string>
	<string name="management">Management</string>
	<string name="todo">Todo</string>
	<string name="add_event">Add event</string>
	<string name="checkbox">checkbox</string>
	<string name="add_todo">Add todo item</string>
	<string name="add_new_todo">Add new todo</string>
	<string name="todo_create_success">Todo item successfully added</string>
	<string name="todo_create_fail">Couldn\'t add todo</string>
	<string name="user_is_admin">User is admin</string>

</resources>