<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:checkableBehavior="single">
		<item
			android:id="@+id/managementItem"
			android:title="@string/management">
			<menu>
				<group android:checkableBehavior="single">
					<item
						android:id="@+id/eventsItem"
						android:title="@string/events"
						android:icon="@drawable/calendar"/>
					<item
						android:id="@+id/todoItem"
						android:title="@string/todo"
						android:icon="@drawable/todo"
						android:visible="false"/>
				</group>
			</menu>
		</item>
		<item
			android:id="@+id/profileItem"
			android:title="@string/profile">
			<menu>
				<group android:checkableBehavior="single">
					<item
						android:id="@+id/updateProfileItem"
						android:title="@string/update_profile"
						android:icon="@drawable/user" />
					<item
						android:id="@+id/updatePasswordItem"
						android:title="@string/update_password"
						android:icon="@drawable/password" />
					<item
						android:id="@+id/logoutItem"
						android:title="@string/log_out"
						android:icon="@drawable/logout" />
				</group>
			</menu>
		</item>
	</group>
</menu>