<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".activities.IntroActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbarLoginActivity"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"/>

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_gravity="center"
		android:src="@drawable/logo_mattatoyo_red"
		android:contentDescription="@string/logo" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_gravity="center"
		android:padding="20dp">

		<androidx.cardview.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="25dp"
			android:layout_marginEnd="25dp"
			android:elevation="10dp"
			app:cardCornerRadius="10dp"
			android:backgroundTint="#DEDDDD">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="10dp"
				android:background="#dedede">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/lets_get_started"
					android:textSize="24sp"
					android:textStyle="bold"
					android:gravity="center"/>
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/app_subtitle"
					android:textSize="18sp"
					android:gravity="center"/>
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/matta_info"
					android:textStyle="italic"
					android:textSize="16sp"
					android:gravity="center"
					android:layout_marginTop="10dp"/>
				<Button
					android:id="@+id/goToLoginBTN"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="24dp"
					android:backgroundTint="@color/matta_red"
					android:text="@string/login"
					android:textColor="@color/white" />
				<Button
					android:id="@+id/goToRegisterBTN"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:backgroundTint="@color/matta_blue"
					android:text="@string/sign_up"
					android:textColor="@color/white" />

			</LinearLayout>

		</androidx.cardview.widget.CardView>

	</LinearLayout>

</LinearLayout>