<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".activities.LoginActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbarLoginActivity"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"/>

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_gravity="center"
		android:src="@drawable/logo_mattatoyo_red"
		android:contentDescription="@string/logo" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_gravity="center"
		android:padding="20dp">

		<androidx.cardview.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="25dp"
			android:layout_marginEnd="25dp"
			android:elevation="10dp"
			app:cardCornerRadius="10dp"
			android:backgroundTint="#DEDDDD">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="10dp"
				android:background="#dedede">

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.appcompat.widget.AppCompatEditText
						android:id="@+id/loginEmailET"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/email"
						android:inputType="textEmailAddress"
						android:textSize="@dimen/default_text_size" />
				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.appcompat.widget.AppCompatEditText
						android:id="@+id/loginPasswordET"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/password"
						android:inputType="textPassword"
						android:textSize="@dimen/default_text_size" />
				</com.google.android.material.textfield.TextInputLayout>

				<Button
					android:id="@+id/loginBTN"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="24dp"
					android:backgroundTint="@color/matta_red"
					android:text="@string/login"
					android:textColor="@color/white" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="15dp"
					android:gravity="center"
					android:orientation="horizontal">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/not_registered"
						android:textSize="16sp" />

					<TextView
						android:id="@+id/registerHereTV"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="8dp"
						android:text="@string/register_here"
						android:textColor="@color/matta_blue"
						android:textStyle="bold"
						android:textSize="16sp" />

				</LinearLayout>

			</LinearLayout>

		</androidx.cardview.widget.CardView>

		<ProgressBar
			android:id="@+id/loginPB"
			style="?android:attr/progressBarStyle"
			android:visibility="invisible"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="@dimen/default_margin"/>

	</LinearLayout>

</LinearLayout>