<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.core.widget.NestedScrollView
		android:id="@+id/event_nested_scrollview"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="?attr/actionBarSize"
		android:fillViewport="true"
		android:scrollbars="none">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/createEventLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView
				android:id="@+id/showEventImageIV"
				android:src="@drawable/image_red_transparency4"
				android:minHeight="200dp"
				android:minWidth="200dp"
				android:maxHeight="200dp"
				android:maxWidth="200dp"
				android:adjustViewBounds="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/default_margin"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				android:contentDescription="@string/event_image" />

			<EditText
				android:id="@+id/eventTitleET"
				android:hint="@string/title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:minEms="20"
				android:textCursorDrawable="@null"
				android:textSize="@dimen/default_text_size"
				android:inputType="textCapSentences|textMultiLine"
				android:layout_marginStart="@dimen/default_margin"
				android:layout_marginTop="@dimen/default_margin"
				android:layout_marginEnd="@dimen/default_margin"
				app:layout_constraintTop_toBottomOf="@+id/showEventImageIV"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent" />

			<EditText
				android:id="@+id/eventDescriptionET"
				android:hint="@string/description"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:minEms="20"
				android:textCursorDrawable="@null"
				android:drawableStart="@drawable/description"
				android:drawablePadding="@dimen/default_drawable_padding"
				android:drawableTint="@color/red_grey"
				android:textSize="@dimen/default_text_size"
				android:inputType="textCapSentences|textMultiLine"
				android:autoLink="all"
				android:gravity="top"
				android:linksClickable="true"
				android:layout_marginStart="@dimen/default_margin"
				android:layout_marginTop="@dimen/default_margin"
				android:layout_marginEnd="@dimen/default_margin"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/eventTitleET"
				app:layout_constraintEnd_toEndOf="parent" />

			<ImageView
				android:id="@+id/eventImageDivider"
				android:layout_width="0dp"
				android:layout_height="@dimen/default_divider_height"
				android:layout_marginTop="@dimen/default_margin"
				android:background="@color/inactive_text_color"
				android:importantForAccessibility="no"
				app:layout_constraintTop_toBottomOf="@+id/eventDescriptionET"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent" />

			<TextView
				android:id="@+id/addEventImageTV"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/add_event_image"
				android:textSize="@dimen/default_text_size"
				android:background="?attr/selectableItemBackground"
				android:drawablePadding="@dimen/default_drawable_padding"
				app:drawableTint="@color/red_grey"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="20dp"
				android:layout_marginTop="@dimen/default_margin"
				android:layout_marginEnd="@dimen/default_margin"
				app:layout_constraintTop_toBottomOf="@+id/eventImageDivider"
				app:layout_constraintEnd_toEndOf="parent"
				app:drawableStartCompat="@drawable/add_photo" />


			<ImageView
				android:id="@+id/eventDescriptionDivider"
				android:layout_width="0dp"
				android:layout_height="@dimen/default_divider_height"
				android:layout_marginTop="@dimen/default_margin"
				android:background="@color/inactive_text_color"
				android:importantForAccessibility="no"
				app:layout_constraintTop_toBottomOf="@+id/addEventImageTV"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent" />


			<TextView
				android:id="@+id/eventDateTV"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/date_placeholder"
				android:textSize="@dimen/default_text_size"
				android:background="?attr/selectableItemBackground"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/eventDescriptionDivider"
				android:layout_marginStart="20dp"
				android:layout_marginTop="@dimen/default_margin"
				app:drawableLeftCompat="@drawable/event"
				android:drawablePadding="@dimen/default_drawable_padding"
				app:drawableTint="@color/red_grey" />

			<TextView
				android:id="@+id/eventTimeTV"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/time_placeholder"
				android:textSize="@dimen/default_text_size"
				android:background="?attr/selectableItemBackground"
				android:layout_marginTop="@dimen/default_margin"
				android:layout_marginEnd="20dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/eventDescriptionDivider"
				app:drawableRightCompat="@drawable/time"
				android:drawablePadding="@dimen/default_drawable_padding"
				app:drawableTint="@color/red_grey" />

			<ImageView
				android:id="@+id/eventDateDivider"
				android:layout_width="0dp"
				android:layout_height="@dimen/default_divider_height"
				android:layout_marginTop="@dimen/default_margin"
				app:layout_constraintTop_toBottomOf="@+id/eventTimeTV"
				android:background="@color/inactive_text_color"
				android:importantForAccessibility="no"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent" />

			<TextView
				android:id="@+id/addReminderTV"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/add_reminder"
				android:textSize="@dimen/default_text_size"
				android:background="?attr/selectableItemBackground"
				android:drawablePadding="@dimen/default_drawable_padding"
				app:drawableTint="@color/red_grey"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="20dp"
				android:layout_marginTop="@dimen/default_margin"
				android:layout_marginEnd="@dimen/default_margin"
				app:layout_constraintTop_toBottomOf="@+id/eventDateDivider"
				app:layout_constraintEnd_toEndOf="parent"
				app:drawableStartCompat="@drawable/notification_add" />

			<TextView
				android:id="@+id/addTagTV"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/add_tag"
				android:textSize="@dimen/default_text_size"
				android:background="?attr/selectableItemBackground"
				android:drawablePadding="@dimen/default_drawable_padding"
				app:drawableTint="@color/red_grey"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="20dp"
				android:layout_marginTop="@dimen/default_margin"
				android:layout_marginEnd="@dimen/default_margin"
				app:layout_constraintTop_toBottomOf="@+id/addReminderTV"
				app:layout_constraintEnd_toEndOf="parent"
				app:drawableStartCompat="@drawable/label" />

			<TextView
				android:id="@+id/addPeopleTV"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/add_people"
				android:textSize="@dimen/default_text_size"
				android:background="?attr/selectableItemBackground"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="20dp"
				android:layout_marginTop="@dimen/default_margin"
				android:layout_marginEnd="@dimen/default_margin"
				app:layout_constraintTop_toBottomOf="@+id/addTagTV"
				app:layout_constraintEnd_toEndOf="parent"
				android:drawablePadding="@dimen/default_drawable_padding"
				app:drawableTint="@color/red_grey"
				app:drawableStartCompat="@drawable/people" />

			<ImageView
				android:id="@+id/eventReminderDivider"
				android:layout_width="0dp"
				android:layout_height="@dimen/default_divider_height"
				android:layout_marginTop="@dimen/default_margin"
				app:layout_constraintTop_toBottomOf="@+id/addPeopleTV"
				android:background="@color/inactive_text_color"
				android:importantForAccessibility="no"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent" />

			<TextView
				android:id="@+id/ownerTV"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/owner"
				android:textSize="@dimen/default_text_size"
				android:layout_marginStart="20dp"
				android:layout_marginTop="@dimen/default_margin"
				android:layout_marginEnd="@dimen/default_margin"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/eventReminderDivider"
				app:layout_constraintEnd_toEndOf="parent"
				android:drawablePadding="@dimen/default_drawable_padding"
				app:drawableTint="@color/red_grey"
				app:drawableStartCompat="@drawable/verified_user" />

			<TextView
				android:id="@+id/ownerNameTV"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/owner_name"
				android:textSize="@dimen/default_text_size"
				android:background="?attr/selectableItemBackground"
				android:layout_marginTop="@dimen/default_margin"
				android:layout_marginEnd="48dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/eventReminderDivider" />

			<Button
				android:id="@+id/saveEventBTN"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/save"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp"
				android:layout_marginBottom="@dimen/default_margin"
				android:layout_marginTop="@dimen/default_margin"
				app:layout_constraintTop_toBottomOf="@+id/ownerNameTV"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent" />

			<ProgressBar
				android:id="@+id/createEventPB"
				style="?android:attr/progressBarStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.core.widget.NestedScrollView>

</layout>