<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".fragments.UpdatePasswordFragment"
	android:id="@+id/updatePasswordLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:layout_gravity="center"
	android:gravity="center"
	android:padding="20dp">

	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="25dp"
		android:layout_marginEnd="25dp"
		android:elevation="10dp"
		app:cardCornerRadius="10dp"
		android:backgroundTint="#DEDDDD">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="10dp"
			android:background="#DEDEDE">

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/currentPasswordET"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/current_password"
					android:inputType="textPassword"
					android:textSize="@dimen/default_text_size" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/newPasswordET"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/new_password"
					android:inputType="textPassword"
					android:textSize="@dimen/default_text_size" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/passwordRepeatET"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/confirm_new_password"
					android:inputType="textPassword"
					android:textSize="@dimen/default_text_size" />
			</com.google.android.material.textfield.TextInputLayout>

			<Button
				android:id="@+id/updatePasswordBTN"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:backgroundTint="@color/matta_red"
				android:text="@string/update_password"
				android:textColor="@color/white" />


		</LinearLayout>

	</androidx.cardview.widget.CardView>

	<ProgressBar
		android:id="@+id/passwordPB"
		style="?android:attr/progressBarStyle"
		android:visibility="invisible"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="@dimen/default_margin" />

</LinearLayout>